fix: center text alignment for left-aligned items in found-words-list to enhance visual consistency

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -1231,6 +1231,7 @@ ol.found-words-list {
 
 		&.left {
 			width: 22%;
+			text-align: center;
 			font-weight: 600;
 		}
 
